--- a/src/sphinx_breeze_theme/assets/styles/sections/article-header.css
+++ b/src/sphinx_breeze_theme/assets/styles/sections/article-header.css
@@ -2,6 +2,7 @@
   position: sticky;
   display: flex;
   z-index: 500;
+  overflow-x: hidden;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
